faucet.yml
apiVersion: v1
kind: Service
metadata:
  name: faucet-service
  namespace: astria-dev-cluster
spec:
  ports:
  - name: faucet-svc-port
    port: 8080
    targetPort: faucet-svc
  selector:
    app: astria-dev-cluster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: astria-dev-cluster
  name: faucet
  namespace: astria-dev-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astria-dev-cluster
  template:
    metadata:
      labels:
        app: astria-dev-cluster
      name: faucet-local
    spec:
      containers:
      - command:
        - /scripts/start-faucet.sh
        image: ghcr.io/astriaorg/ria-faucet:0.0.1
        name: faucet
        ports:
        - containerPort: 8080
          name: faucet-svc
        volumeMounts:
        - mountPath: /scripts/
          name: faucet-scripts-volume
          readOnly: true
        - mountPath: /home/faucet
          name: faucet-home-vol
      volumes:
      - configMap:
          defaultMode: 320
          name: faucet-scripts-dm57h8m4d5
        name: faucet-scripts-volume
      - emptyDir: {}
        name: faucet-home-vol
