manifest.yaml
NAME: cl-test
LAST DEPLOYED: Wed Aug  9 13:04:27 2023
NAMESPACE: default
STATUS: pending-install
REVISION: 1
TEST SUITE: None
USER-SUPPLIED VALUES:
{}

COMPUTED VALUES:
evmChainId: astria
evmNetworkId: 912559
genesisAllocAddress: 0xaC21B97d35Bf75A7dAb16f35b111a50e78A72F30
ports:
  blockscout: 4000
  executionGRPC: 50051
  faucet: 8080
  gossipnet: 2451
  jsonRPC: 8545
  wsRPC: 8546
privateKey: 8b3a7999072c9c9314c084044fe705db11714c6c4ed7cddb64da18ea270dd203
rollupName: astria
storage:
  blockscout-postgres:
    path: /data/rollup-data/blockscout/postgres
    persistentVolumeName: blockscout-postgres
    size: 2Gi
    storageClassName: blockscout-postgres-storage-local
    type: local
  blockscout-redis:
    path: /data/rollup-data/blockscout/redis
    persistentVolumeName: blockscout-redis
    size: 2Gi
    storageClassName: blockscout-redis-storage-local
    type: local
  executor:
    path: /data/rollup-data/executor
    persistentVolumeName: executor
    size: 2Gi
    storageClassName: executor-storage-local
    type: local

HOOKS:
MANIFEST:
---
# Source: rollup/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: astria-evm-service
  namespace: astria-dev-cluster
spec:
  selector:
    app: astria-astria-dev-cluster
  ports:
    - name: json-rpc-svc
      port: 8545
      targetPort: json-rpc
    - name: ws-rpc-svc
      port: 8546
      targetPort: ws-rpc
    - name: gossipnet-svc
      port: 2451
      targetPort: gossipnet
---
# Source: rollup/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: astria-faucet-service
  namespace: astria-dev-cluster
spec:
  selector:
    app: astria-astria-dev-cluster
  ports:
    - name: faucet-svc
      port: 8080
      targetPort: faucet
---
# Source: rollup/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: astria-blockscout-svc
  namespace: astria-dev-cluster
spec:
  selector:
    app: astria-astria-dev-cluster
  ports:
    - name: blockscout-svc
      port: 4000
      targetPort: blockscout
---
# Source: rollup/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astria-geth
  labels:
    app: astria-astria-dev-cluster
  namespace: astria-dev-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astria-astria-dev-cluster
  template:
    metadata:
      name: astria-execution-chain
      labels:
        app: astria-astria-dev-cluster
    spec:
      containers:
        - name: geth
          command: [ "/scripts/start-geth.sh" ]
          image: "ghcr.io/astriaorg/go-ethereum:0.2.0"
          volumeMounts:
            - mountPath: /scripts/
              name: astria-executor-scripts-volume
              readOnly: true
            - mountPath: /home/geth
              name: astria-executor-home-vol
          ports:
            - containerPort: 8545
              name: json-rpc
            - containerPort: 8546
              name: ws-rpc
            - containerPort: 50051
              name: execution-grpc
        - name: composer
          image: "ghcr.io/astriaorg/composer:0.1.0--composer"
          command: [ "/usr/local/bin/astria-composer" ]
          stdin: true
          tty: true
        - name: conductor
          image: "ghcr.io/astriaorg/conductor:0.4.0--conductor"
          command: [ "/scripts/start-conductor.sh" ]
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /scripts/
              name: astria-conductor-scripts-volume
              readOnly: true
          ports:
            - containerPort: 2451
              name: gossipnet
      volumes:
        - name: astria-executor-scripts-volume
          configMap:
            name: astria-executor-scripts
            defaultMode: 0500
        - name: astria-conductor-scripts-volume
          configMap:
            name: astria-conductor-scripts
            defaultMode: 0500
        - name: astria-executor-home-vol
          persistentVolumeClaim:
            claimName: astria-executor-pvc
---
# Source: rollup/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astria-faucet
  labels:
    app: astria-astria-dev-cluster
  namespace: astria-dev-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astria-astria-dev-cluster
  template:
    metadata:
      name: astria-faucet
      labels:
        app: astria-astria-dev-cluster
    spec:
      containers:
        - name: faucet
          command: [ "/app/eth-faucet" ]
          args:
            - -httpport=8080
            - -wallet.provider=http://astria-evm-service:8545
            - -wallet.privkey=8b3a7999072c9c9314c084044fe705db11714c6c4ed7cddb64da18ea270dd203
          image: "ghcr.io/astriaorg/ria-faucet:0.0.1"
          volumeMounts:
            - mountPath: /home/faucet
              name: astria-faucet-home-vol
          ports:
            - containerPort: 8080
              name: faucet
      volumes:
        - emptyDir: { }
          name: astria-faucet-home-vol
---
# Source: rollup/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astria-blockscout
  labels:
    app: astria-astria-dev-cluster
  namespace: astria-dev-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astria-astria-dev-cluster
  template:
    metadata:
      name: astria-blockscout-local
      labels:
        app: astria-astria-dev-cluster
    spec:
      containers:
        - name: blockscout
          command: ["bash"]
          args:
            - -c
            - bin/blockscout eval "Elixir.Explorer.ReleaseTasks.create_and_migrate()" && bin/blockscout start
          image: "docker.io/blockscout/blockscout:5.1.0"
          volumeMounts:
            - mountPath: /app/logs
              name: astria-blockscout-logs-vol
          ports:
            - containerPort: 4000
              name: blockscout
        - name: postgres
          command: ["docker-entrypoint.sh"]
          args:
            - -c
            - max_connections=200
          image: docker.io/library/postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: astria-blockscout-postgres-vol
        - name: redis
          command: ["redis-server"]
          image: docker.io/library/redis:alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: astria-blockscout-redis-vol
        - name: sig-provider
          image: ghcr.io/blockscout/sig-provider:latest@sha256:ae371ce8d0a20993bf61ca81b3394416f4778c9edd398250fd4d81a8d6820950
          ports:
            - containerPort: 8050
        - name: smart-contract-verifier
          image: ghcr.io/blockscout/smart-contract-verifier:v1.3.0@sha256:f07b2d874c28d45f5ba81f297c868a746a03771e8b6d9b8e96f0eba0beeb1016
          ports:
            - containerPort: 8150
        - name: visualizer
          image: ghcr.io/blockscout/visualizer:v0.2.0@sha256:99479da126248e0aba5c32b1e32625f8c527b72924f55cb510b50e5f854b2d15
          ports:
            - containerPort: 8151
      volumes:
        - emptyDir: {}
          name: astria-blockscout-logs-vol
        - name: astria-blockscout-postgres-vol
          persistentVolumeClaim:
            claimName: astria-blockscout-postgres-pvc
        - name: astria-blockscout-redis-vol
          persistentVolumeClaim:
            claimName: astria-blockscout-redis-pvc
---
# Source: rollup/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astria-ingress
  namespace: astria-dev-cluster
spec:
  rules:
    - host: executor.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: astria-evm-service
                port:
                  name: json-rpc-svc
    - host: ws-executor.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: astria-evm-service
                port:
                  name: ws-rpc-svc
    - host: faucet.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: astria-faucet-service
                port:
                  name: faucet-svc
    - host: blockscout.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: astria-blockscout-svc
                port:
                  name: blockscout-svc
